--- a/login.html
+++ b/login.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/86ccccfd4c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <title>Login Page</title>
 </head>
@@ -26,12 +27,12 @@
         </div>
         </form>   
     </div>
-    <div>
-        <h5>New to Paystack? aSign up</h5>a
-        <h5>Forgot your password?</h5>
+    <div class="h-5">
+        <h5>New to Paystack? <a href="signup.html">Sign up</a></h5>
+        <a href="#">Forgot your password?</a>
     </div>
     <div>
-        <button>Help</button>
+        <button class="help"> <i class="far fa-question-circle"></i> Help</button>
     </div>
 </body>
 </html>
